--- a/spring-email-kotlin/pom.xml
+++ b/spring-email-kotlin/pom.xml
@@ -5,10 +5,10 @@
 
     <groupId>com.github.migangqui</groupId>
     <artifactId>spring-email-api-kotlin</artifactId>
-    <version>1.0.1</version>
+    <version>1.1.0</version>
 
-    <name>spring-email</name>
-    <description>Java API to send emails in Spring</description>
+    <name>spring-email-api-kotlin</name>
+    <description>Kotlin API to send emails in Spring</description>
 
     <url>https://github.com/migangqui/spring-email-api</url>
     <developers>
@@ -34,30 +34,21 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <kotlin.version>1.3.71</kotlin.version>
+        <kotlin.version>1.6.20</kotlin.version>
+        <spring-boot.version>2.6.6</spring-boot.version>
+        <commons-io.version>2.11.0</commons-io.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
-            <version>2.2.5.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>2.9.8</version>
+            <version>${spring-boot.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.7</version>
-        </dependency>
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.16.18</version>
-            <scope>provided</scope>
+            <version>${commons-io.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -149,7 +140,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-source-plugin</artifactId>
-                        <version>3.0.1</version>
+                        <version>3.2.1</version>
                         <executions>
                             <execution>
                                 <id>attach-sources</id>
@@ -162,7 +153,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>3.0.0</version>
+                        <version>3.3.2</version>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
@@ -175,7 +166,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.6</version>
+                        <version>3.0.1</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -189,7 +180,7 @@
                     <plugin>
                         <groupId>org.jetbrains.dokka</groupId>
                         <artifactId>dokka-maven-plugin</artifactId>
-                        <version>0.9.18</version>
+                        <version>1.6.10</version>
                         <executions>
                             <execution>
                                 <phase>prepare-package</phase>
