--- a/.github/workflows/maven-kotlin.yml
+++ b/.github/workflows/maven-kotlin.yml
@@ -6,7 +6,7 @@ name: Java CI with Maven
 on:
   pull_request:
     branches: [ master ]
-    paths: ['spring-email-java/**']
+    paths: ['spring-email-kotlin/**']
 
 jobs:
   build:
@@ -22,4 +22,4 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build with Maven
-        run: mvn -B package --file spring-email-java/pom.xml
+        run: mvn -B package --file spring-email-kotlin/pom.xml
